# the-watcher

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/data/: graph.json
backend/tests/: test_connectors.py  test_graph_store.py  test_reasoning.py  test_tools_api.py
backend/watcher/: cli.py  compliance.py  mcp_server.py  tools.py
backend/watcher/api/: main.py
backend/watcher/graph/: __init__.py  model.py  store.py
backend/watcher/ingest/: aws_connector.py  demo.py  github_connector.py
backend/watcher/reasoning/: __init__.py  blast_radius.py  detectors.py  engine.py  findings.py  llm.py
docs/: aws-readonly-policy.json  case-study.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Landing.jsx  index.css
frontend/src/components/: FindingCard.jsx  RawView.jsx  Severity.jsx  Trace.jsx
